--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node_cafe:N0BvTHuPMZhFewse@clustercafe.zep5yrh.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=3sT0e2M1Pu8L1cK3y@*/16181990
