--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node_cafe:N0BvTHuPMZhFewse@clustercafe.zep5yrh.mongodb.net/cafeDB
 SECRETORPRIVATEKEY=3sT0e2M1Pu8L1cK3y@*/16181990
+
+GOOGLE_CLIENT_ID=340483271336-5k5rle6rlrgrtqg8ujjnvt99m4t0q6fs.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
