--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ SECRETORPRIVATEKEY=3sT0e2M1Pu8L1cK3y@*/16181990
 
 GOOGLE_CLIENT_ID=340483271336-5k5rle6rlrgrtqg8ujjnvt99m4t0q6fs.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
+
+CLOUDINARY_URL=cloudinary://916216335289853:F26uE9-daofo6XOGMvQ8IGKRkzw@dhhqex9km
