--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.2.1",
     "cjs-loader": "^0.1.0",
+    "cloudinary": "^1.34.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
-    "node": "^14.0.0"
+    "node": "^14.0.0",
+    "uuid": "^9.0.0"
   }
 }
